[package]
name = "TrainTracker"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
fuzzy_match = "0.2.1"
http = "1.4.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = "1.0.188"
thiserror = "2.0.17"
tokio = "1.48.0"
url = "2.5.7"

[dependencies.mongodb]
version = "3.4.1"
features = ["sync"]
